test/good/arrays/empty12.px

func f<A,B>([A] x) [B] def
    print x
    return []

a = [][:1]
[Int] b = a
print b + [3]

c = ['c']
c = f([])
print c.length