test/bad/generics/type02.px

func f<Any T>(Bool b) T def
    return b
